--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestCommitMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestCommitMain.xaml
@@ -61,27 +61,15 @@
                             ScrollViewer.HorizontalScrollBarVisibility="Auto"
                             ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-                                    <dxg:GridColumn FieldName="commitId" />
+                        <dxg:GridColumn FieldName="commitId" BestFitModeOnSourceChange="Smart"/>
 
-                                    <dxg:GridColumn FieldName="author.name" Header="Author" />
-                                    <dxg:GridColumn FieldName="author.date" Header="Authored Date" Width="150">
-                                        <dxg:GridColumn.EditSettings>
-                                            <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                                        </dxg:GridColumn.EditSettings>
-                                    </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="author.name" Header="Author" />
+                        <dxg:GridColumn FieldName="author.date" Header="Authored Date" Style="{StaticResource DateTimeColumn}" />    
 
-                                    <dxg:GridColumn FieldName="committer.name" Header="Committer" />
-                                    <dxg:GridColumn FieldName="committer.date" Header="Committer Date" Width="150">
-                                        <dxg:GridColumn.EditSettings>
-                                            <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                                        </dxg:GridColumn.EditSettings>
-                                    </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="committer.name" Header="Committer" />
+                        <dxg:GridColumn FieldName="committer.date" Header="Committer Date" Style="{StaticResource DateTimeColumn}" />
 
-                                    <dxg:GridColumn FieldName="changeCounts.Add" Header="Adds" Width="50" />
-                                    <dxg:GridColumn FieldName="changeCounts.Delete" Header="Deletes" Width="50" />
-                                    <dxg:GridColumn FieldName="changeCounts.Edit" Header="Edits" Width="50" />
-                                    <dxg:GridColumn FieldName="comment" Width="*"/>
-                                    <dxg:GridColumn FieldName="commentTruncated" />
+                        <dxg:GridColumn FieldName="comment" Width="*"/>
                                     <!--<dxg:GridColumn FieldName="url" />-->
                     </dxg:GridControl>
 
@@ -100,7 +88,7 @@
                 The particular information is in a separate view.
             -->
 
-            <dxlc:LayoutGroup Orientation="Vertical"  View="Tabs" >
+            <!--<dxlc:LayoutGroup Orientation="Vertical"  View="Tabs" >
 
                 <dxlc:LayoutGroup.GroupBoxStyle>
                     <Style TargetType="dxlc:GroupBox">
@@ -116,7 +104,7 @@
                     <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestCommitChangeMainRegion}" />
                 </dxlc:LayoutGroup>
 
-            </dxlc:LayoutGroup>
+            </dxlc:LayoutGroup>-->
 
     </dxlc:LayoutControl>
 
