--- a/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/CommitMain.xaml
@@ -67,19 +67,10 @@
                         <dxg:GridColumn FieldName="commitId" />
             
                         <dxg:GridColumn FieldName="author.name" Header="Author"/>
-                        <dxg:GridColumn FieldName="author.date" Header="Authored Date" Width="150">
-                            <dxg:GridColumn.EditSettings>
-                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                            </dxg:GridColumn.EditSettings>
-                        </dxg:GridColumn>
+                        <dxg:GridColumn FieldName="author.date" Header="Authored Date" Style="{StaticResource DateTimeColumn}" />
             
                         <dxg:GridColumn FieldName="committer.name" Header="Committer" />
-                        <dxg:GridColumn FieldName="committer.date" Header="Committer Date" Width="150">
-                            <dxg:GridColumn.EditSettings>
-                                <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                            </dxg:GridColumn.EditSettings>
-                        </dxg:GridColumn>
-
+                        <dxg:GridColumn FieldName="committer.date" Header="Committer Date" Style="{StaticResource DateTimeColumn}" />
                         <dxg:GridColumn FieldName="changeCounts.Add" Header="Adds" Width="50" />
                         <dxg:GridColumn FieldName="changeCounts.Delete" Header="Deletes" Width="50" />
                         <dxg:GridColumn FieldName="changeCounts.Edit" Header="Edits" Width="50" />
