--- a/AZDORestApiExplorer.Git/Presentation/Views/StatMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/StatMain.xaml
@@ -52,20 +52,12 @@
                     ScrollViewer.HorizontalScrollBarVisibility="Auto"
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
 
-            <dxg:GridColumn FieldName="name" />
-            <dxg:GridColumn FieldName="commit.commitId" />
-            <dxg:GridColumn FieldName="commit.author.name" Header="Author" />
-            <dxg:GridColumn FieldName="commit.author.date" Header="Authored Date"  >
-                <dxg:GridColumn.EditSettings>
-                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                </dxg:GridColumn.EditSettings>
-            </dxg:GridColumn>
-            <dxg:GridColumn FieldName="commit.committer.name" Header="Committer" />
-            <dxg:GridColumn FieldName="commit.committer.date" Header="Committed Date"  >
-                <dxg:GridColumn.EditSettings>
-                    <dxe:DateEditSettings DisplayFormat="yyyy/MM/dd hh:mm:ss tt" />
-                </dxg:GridColumn.EditSettings>
-            </dxg:GridColumn>
+            <dxg:GridColumn FieldName="name" BestFitModeOnSourceChange="Smart"/>
+            <dxg:GridColumn FieldName="commit.commitId" Header="Commit" BestFitModeOnSourceChange="Smart"/>
+            <dxg:GridColumn FieldName="commit.author.name" Header="Author" BestFitModeOnSourceChange="Smart" />
+            <dxg:GridColumn FieldName="commit.author.date" Header="Authored Date"  Style="{StaticResource DateTimeColumn}" />
+            <dxg:GridColumn FieldName="commit.committer.name" Header="Committer" BestFitModeOnSourceChange="Smart"/>
+            <dxg:GridColumn FieldName="commit.committer.date" Header="Committed Date" Style="{StaticResource DateTimeColumn}" />
             <dxg:GridColumn FieldName="aheadCount" />
             <dxg:GridColumn FieldName="behindCount" />
             <dxg:GridColumn FieldName="isBaseVersion" />
