Trying to make sense of resetting a top level thing like Repository

--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestReviewerMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestReviewerMain.xaml
@@ -53,7 +53,7 @@
                     ScrollViewer.VerticalScrollBarVisibility="Auto">
 
                 <dxg:GridColumn FieldName="displayName" />
-                <dxg:GridColumn FieldName="uniqueName" />
+                <dxg:GridColumn FieldName="uniqueName" BestFitModeOnSourceChange="Smart" />
                 <dxg:GridColumn FieldName="isRequired" />
                 <dxg:GridColumn FieldName="vote" />
                 <dxg:GridColumn FieldName="hasDeclined" />
