--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationChangeMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationChangeMain.xaml
@@ -77,16 +77,14 @@
                         <dxg:GridColumn FieldName="item.objectId" Header="Item.objectId" BestFitModeOnSourceChange="Smart"/>
                         <dxg:GridColumn FieldName="item.originalObjectId" Header="Item.originalObjectId" BestFitModeOnSourceChange="Smart"/>
 
-                        <!--<dxg:GridColumn FieldName="changeId" Header="Date" Style="{StaticResource DateTimeColumn}" />-->
-                        
                     </dxg:GridControl>
 
-                    <dxlc:LayoutGroup Grid.Row="2" Header="Selected Item Details" 
+                    <!--<dxlc:LayoutGroup Grid.Row="2" Header="Selected Item Details" 
                                       Orientation="Vertical" ItemLabelsAlignment="Local" View="GroupBox" >
                         <dxlc:LayoutItem Label="Url" >
                             <dxe:TextEdit  Text="{Binding Results.SelectedItem.url}" />
                         </dxlc:LayoutItem>
-                    </dxlc:LayoutGroup>
+                    </dxlc:LayoutGroup>-->
 
                 </Grid>                
 
