--- a/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationMain.xaml
+++ b/AZDORestApiExplorer.Git/Presentation/Views/PullRequestIterationMain.xaml
@@ -107,7 +107,7 @@
             </dxlc:LayoutGroup.GroupBoxStyle>
 
             <dxlc:LayoutGroup Header="Iteration Changes" >
-                <!--<ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestIterationChangeMainRegion}" />-->
+                <ContentControl prism:RegionManager.RegionName="{x:Static core:RegionNames.PullRequestIterationChangeMainRegion}" />
             </dxlc:LayoutGroup>
 
             <dxlc:LayoutGroup Header="Iteration Commits" >
