--- a/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
+++ b/AZDORestApiExplorer/Presentation/Views/MainWindow.xaml
@@ -438,6 +438,10 @@
 
                         <Label Content="{Binding InstanceCountVM}" />
                     </StackPanel>
+
+
+                    <Button Content="Save Layout" Click="SaveLayout_Click" />
+                    <Button Content="Restore Layout" Click="RestoreLayout_Click" />
                 </StackPanel>
 
             </DockPanel>
